--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Valid8"
-        parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -11,8 +11,82 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/absolute_zero</item>
         <!-- Customize your theme here. -->
         <item name="statusBarBackground">@color/black</item>
     </style>
+
+    <!-- Fragment Title Theme -->
+    <style name="FragmentTitleTheme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/title_text_size</item>
+        <item name="fontFamily">@font/avenir_heavy</item>
+    </style>
+
+    <!--  Description Theme  -->
+    <style name="DescriptionText">
+        <item name="android:textSize">@dimen/regular_font_size</item>
+        <item name="fontFamily">@font/nunito_sans_regular</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <!-- Button Close Theme -->
+    <style name="TransparentCloseButton"
+        parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/transparent</item>
+        <item name="android:background">@color/transparent</item>
+        <item name="iconTint">@color/white</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="iconPadding">@dimen/no_dp</item>
+        <item name="icon">@drawable/baseline_close_24</item>
+        <item name="iconGravity">end</item>
+
+    </style>
+
+    <style name="CustomBodyLayout">
+        <item name="android:background">@drawable/main_body_background</item>
+        <item name="android:padding">@dimen/dimen_16dp</item>
+        <item name="android:layout_marginTop">@dimen/dimen_16dp</item>
+    </style>
+
+    <style name="CulturedCustomBodyLayout"
+        parent="CustomBodyLayout">
+        <item name="android:backgroundTint">@color/cultured_2</item>
+    </style>
+
+    <style name="AvenirDescriptionText"
+        parent="DescriptionText">
+        <item name="fontFamily">@font/avenir_book</item>
+    </style>
+
+    <style name="RegularTextInputLayout"
+        parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="android:textColorHint">@color/black</item>
+        <item name="hintTextColor">@color/black</item>
+        <item name="boxStrokeColor">@color/black</item>
+        <item name="fontFamily">@font/inter_regular</item>
+        <item name="boxStrokeWidth">@dimen/box_stroke_width</item>
+        <item name="boxStrokeWidthFocused">@dimen/box_stroke_width</item>
+        <item name="expandedHintEnabled">false</item>
+        <item name="hintEnabled">true</item>
+        <item name="android:focusable">false</item>
+
+    </style>
+
+    <style name="RegularEditText"
+        parent="DescriptionText">
+        <item name="fontFamily">@font/avenir_light_oblique</item>
+        <item name="android:textColorHint">@color/dark_silver</item>
+        <item name="android:padding">@dimen/input_layout_padding</item>
+    </style>
+
+    <style name="CustomPrimaryButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/regular_font_size</item>
+        <item name="fontFamily">@font/nunito_sans_extrabold</item>
+        <item name="android:padding">@dimen/button_padding</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/yale_blue</item>
+    </style>
+
 </resources>
