--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -74,7 +74,8 @@
                 android:hint="@string/phone_number"
                 app:layout_constraintTop_toBottomOf="@+id/tv_registration_description">
 
-                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_phone_number"
                     style="@style/RegularEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -96,6 +97,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/til_phone_number">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_first_name"
                     style="@style/RegularEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -113,7 +115,8 @@
                 android:hint="@string/last_name"
                 app:layout_constraintTop_toBottomOf="@+id/til_first_name">
 
-                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_last_name"
                     style="@style/RegularEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -134,6 +137,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/til_last_name">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_email"
                     style="@style/RegularEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -151,7 +155,8 @@
                 android:hint="@string/enter_your_password"
                 app:layout_constraintTop_toBottomOf="@+id/til_email">
 
-                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_password"
                     style="@style/RegularEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -172,6 +177,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/til_password">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_confirm_password"
                     style="@style/RegularEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
