--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -78,6 +78,7 @@
         <item name="fontFamily">@font/avenir_light_oblique</item>
         <item name="android:textColorHint">@color/dark_silver</item>
         <item name="android:padding">@dimen/input_layout_padding</item>
+        <item name="android:imeOptions">actionNext</item>
     </style>
 
     <style name="CustomPrimaryButton">
